# ked-texteditor

./: Cargo.toml  log.md  readme-j.md  readme.md  run.sh
src/: editbuffer.rs  editor.rs  lib.rs  macrocommand.rs  main.rs  prompt.rs  screen.rs  statusbar.rs  window.rs
tests/: 80x24.txt  macro_test_runner.rs
tests/script/test1/: macro.json  run.sh
tests/script/test2/: macro.json  run.sh
