[package]
name = "ked"
version = "0.1.0"
authors = ["kondou nobuhiro <kondou.nobuhiro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "*"
getopts = "*"
unicode-width = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"